--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: ^0.12.2
   search_app_bar: ^1.0.2+2
+  provider: ^4.3.2+2  
   dio: 1.0.0
+  get_it: ^5.0.1
 
 dev_dependencies:
   flutter_test:
