--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   get_it: ^5.0.1
   excel: ^1.1.5
   gsheets: ^0.2.6
+  onesignal_flutter: ^2.0.0
   syncfusion_flutter_xlsio: ^18.3.50-beta
   spreadsheet_decoder: ^1.2.0
   path_provider: ^1.6.24
